hphp/hack/test/typecheck/new_inference/eager_solve/solve_nothing.php.exp
ERROR: File "solve_nothing.php", line 26, characters 21-22:
Was expecting an array or collection but type is unknown (Typing[4297])
  File "solve_nothing.php", line 25, characters 20-24:
  It is unknown because type parameter `Tv` of `MySet` could not be determined. Please add explicit type parameters to the invocation of `MySet`
  File "solve_nothing.php", line 10, characters 23-24:
    via this generic `Tv`
ERROR: File "solve_nothing.php", line 26, characters 27-28:
Was expecting an array or collection but type is unknown (Typing[4297])
  File "solve_nothing.php", line 26, characters 5-6:
  It is unknown because a type could not be determined here
ERROR: File "solve_nothing.php", line 26, characters 33-34:
Was expecting an array or collection but type is unknown (Typing[4297])
  File "solve_nothing.php", line 26, characters 5-6:
  It is unknown because a type could not be determined here
